QueryLib: Remove optimizations on group terms

This isn't a proper fix, but more like a temporary patch, which I should
find a proper way to fix in the future.

BUG: 319402
REVIEW: 111496